@@ -1,23 +1,23 @@
-# $NetBSD: Makefile,v 1.2 2002/10/08 04:49:41 cjep Exp $
+# $NetBSD: Makefile,v 1.3 2002/12/22 16:06:33 cjep Exp $
 #
 
 DISTNAME=	gap4r3
 PKGNAME=	gap-4.3
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	math
 MASTER_SITES=	ftp://ftp-gap.dcs.st-and.ac.uk/pub/gap/gap4/ \
 		ftp://ftp.math.rwth-aachen.de/pub/gap4/ \
 		ftp://pell.anu.edu.au/pub/algebra/gap4/ \
 		ftp://ftp.ccs.neu.edu/pub/mirrors/ftp-gap.dcs.st-and.ac.uk/pub/gap/gap4/
 DISTFILES=		${DISTNAME}${EXTRACT_SUFX}	\
-			fix4r3n3.tar.gz
+			fix4r3n4.tar.gz
 
 MAINTAINER=	cjep@netbsd.org
 HOMEPAGE=	http://www.gap-system.org/
 COMMENT=	Computational group theory and discrete algebra language
 
 EXTRACT_ONLY=		${DISTNAME}${EXTRACT_SUFX}
-SITES_fix4r3n3.tar.gz=	${MASTER_SITES:=bugfixes/}
+SITES_fix4r3n4.tar.gz=	${MASTER_SITES:=bugfixes/}
 
 LICENSE=	no-commercial-use
 
@@ -29,7 +29,7 @@ GAP_DIRECTORY=	${PREFIX}/lib/gap4.3
 GAP_PLATFORM=	${MACHINE_GNU_PLATFORM}-cc
 
 post-extract:
-	( cd ${WRKSRC} && ${GTAR} zxf ${DISTDIR}/fix4r3n3.tar.gz )
+	( cd ${WRKSRC} && ${GTAR} zxf ${DISTDIR}/fix4r3n4.tar.gz )
 
 do-install:
 	${INSTALL_PROGRAM_DIR} ${GAP_DIRECTORY}
@@ -41,7 +41,7 @@ do-install:
 				${GAP_DIRECTORY}/bin/${GAP_PLATFORM}
 	${INSTALL_SCRIPT} ${WRKSRC}/bin/gap.sh 				\
 				${PREFIX}/bin/gap${PKGVERSION}
-	${INSTALL_DATA} ${WRKSRC}/description3 				\
+	${INSTALL_DATA} ${WRKSRC}/description4 				\
 				${GAP_DIRECTORY}
 	${LN} -sf ${PREFIX}/bin/gap${PKGVERSION} ${PREFIX}/bin/gap
 	${INSTALL_DATA} ${WRKSRC}/sysinfo.gap				\
